# agentsmith

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  run_smithtest.py
src/: __main__.py  core.py  health.py  utils.py
src/agentsmith/: __init__.py  cli.py  report.py  runner.py
src/agentsmith/agents/: __init__.py  base.py  react.py  tool_use.py
src/agentsmith/detectors/: __init__.py  deception.py  replication.py  survival.py
src/agentsmith/environments/: __init__.py  base.py  goal_mod.py  replication.py  resource.py  shutdown.py
tests/: test_benchmark.py  test_core.py  test_detectors.py  test_environments.py  test_integration.py
