[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smithtest"
version = "0.1.0"
description = "The Agent Smith Problem — Detecting emergent self-preservation and self-replication drives in autonomous AI agents."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mukunda Katta"},
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
smithtest = "agentsmith.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
